add image deduplication

--- a/images_convert.ipynb
+++ b/images_convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "Collapsed": "false"
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "Collapsed": "false"
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "Collapsed": "false"
    },
@@ -115,7 +115,28 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "images/external_link/reddit/dataisugly/65whnm.svg\n",
+      "images/external_link/reddit/dataisugly/70u6d2.svg\n",
+      "images/external_link/reddit/dataisugly/67k7av.svg\n",
+      "images/external_link/reddit/dataisugly/4nrtbc.svg\n",
+      "images/external_link/reddit/dataisugly/825ac2.svg\n",
+      "images/external_link/reddit/dataisugly/69yvyt.svg\n",
+      "images/external_link/reddit/dataisugly/4p4v8y.svg\n",
+      "images/external_link/reddit/dataisugly/24wwx0.svg\n",
+      "images/external_link/reddit/dataisugly/560wz7.svg\n",
+      "images/external_link/reddit/dataisugly/2ozjnf.svg\n",
+      "images/external_link/reddit/dataisugly/2lrdlz.svg\n",
+      "images/external_link/reddit/dataisugly/2gs5vv.svg\n",
+      "images/external_link/reddit/dataisugly/5akipl.svg\n",
+      "images/external_link/reddit/dataisugly/77jqk2.svg\n"
+     ]
+    }
+   ],
    "source": [
     "for root, dirs, files in os.walk(images_dir):\n",
     "    for name in files:\n",
@@ -158,7 +179,28 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "images/external_link/reddit/dataisugly/6k75ne.mp4\n",
+      "rm: cannot remove 'images/external_link/reddit/dataisugly/6k75ne.gif': No such file or directory\n",
+      "images/external_link/reddit/dataisugly/6x00ux.mp4\n",
+      "rm: cannot remove 'images/external_link/reddit/dataisugly/6x00ux.gif': No such file or directory\n",
+      "images/external_link/reddit/dataisugly/6flghc.mp4\n",
+      "rm: cannot remove 'images/external_link/reddit/dataisugly/6flghc.gif': No such file or directory\n",
+      "images/external_link/reddit/dataisugly/aq45ys.mp4\n",
+      "rm: cannot remove 'images/external_link/reddit/dataisugly/aq45ys.gif': No such file or directory\n",
+      "images/external_link/reddit/dataisugly/3s9u7s.mp4\n",
+      "rm: cannot remove 'images/external_link/reddit/dataisugly/3s9u7s.gif': No such file or directory\n",
+      "images/external_link/reddit/dataisugly/aq45ob.mp4\n",
+      "rm: cannot remove 'images/external_link/reddit/dataisugly/aq45ob.gif': No such file or directory\n",
+      "images/external_link/reddit/dataisugly/49f8u8.mp4\n",
+      "rm: cannot remove 'images/external_link/reddit/dataisugly/49f8u8.gif': No such file or directory\n"
+     ]
+    }
+   ],
    "source": [
     "for root, dirs, files in os.walk(images_dir):\n",
     "    for name in files:\n",
@@ -202,7 +244,15 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "images/external_link/reddit/dataisugly/51bj75.bmp\n"
+     ]
+    }
+   ],
    "source": [
     "for root, dirs, files in os.walk(images_dir):\n",
     "    for name in files:\n",
@@ -244,7 +294,16 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "images/external_link/reddit/dataisugly/71cunh.webp\n",
+      "images/external_link/reddit/dataisugly/9lnnlr.webp\n"
+     ]
+    }
+   ],
    "source": [
     "for root, dirs, files in os.walk(images_dir):\n",
     "    for name in files:\n",
@@ -275,7 +334,15 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "images/external_link/reddit/dataisugly/2w19o1.pngh\n"
+     ]
+    }
+   ],
    "source": [
     "# id: '2w19o1' downloaded from 'http://i.imgur.com/GE7LJR6.pngh' as .pngh\n",
     "\n",
@@ -302,7 +369,15 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "images/external_link/reddit/dataisugly/4f927p(null\n"
+     ]
+    }
+   ],
    "source": [
     "# id: '4f927p' downloaded from 'http://imgur.com/(null)' as '4f927p(null'\n",
     "\n",
@@ -468,6 +543,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
