--- a/reddit_digest.ipynb
+++ b/reddit_digest.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "Collapsed": "false"
    },
@@ -84,6 +84,7 @@
     "        'num_comments',\n",
     "        'external_link',\n",
     "        'source',\n",
+    "        'source_platform',\n",
     "        'source_url',\n",
     "        'duplicated_posts',\n",
     "        'tags',\n",
@@ -109,7 +110,8 @@
     "        self.content = s['selftext']\n",
     "        self.ups = s['ups']\n",
     "        self.num_comments = s['num_comments']\n",
-    "        self.source = 'Reddit'\n",
+    "        self.source = self._subreddit\n",
+    "        self.source_platform = 'reddit'\n",
     "        self.source_url = f'https://www.reddit.com/{s[\"subreddit_name_prefixed\"]}'\n",
     "\n",
     "        self._crosspost = (Submission(s['crosspost_parent_list'][0], self.post_id)\n",
@@ -263,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "Collapsed": "false"
    },
@@ -280,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "Collapsed": "false"
    },
@@ -288,7 +290,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf5b7e6687f24742ac226bf437e89f85",
+       "model_id": "b7807cb01e4842568ec95d8b7e6de994",
        "version_major": 2,
        "version_minor": 0
       },
@@ -312,6 +314,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "# Fix problematic posts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -321,7 +332,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('5e3ae2b6c8ae73016fbfaea6'),\n",
+       "{'_id': ObjectId('5e3fdf5bc8ae73016fd1a58a'),\n",
        " 'id': '4f927p',\n",
        " 'post_id': 'reddit/dataisugly/4f927p',\n",
        " 'datetime': '2016-04-17T23:25:13',\n",
@@ -335,9 +346,10 @@
        " 'ups': 0,\n",
        " 'num_comments': 0,\n",
        " 'external_link': 'http://imgur.com/(null)',\n",
-       " 'source': 'Reddit',\n",
+       " 'source': 'dataisugly',\n",
+       " 'source_platform': 'reddit',\n",
        " 'source_url': 'https://www.reddit.com/r/dataisugly',\n",
-       " 'duplicated_post': [],\n",
+       " 'duplicated_posts': [],\n",
        " 'tags': [],\n",
        " 'media_type': 'text',\n",
        " 'labels': {'auto': []}}"
@@ -362,7 +374,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x7f50bfe16640>"
+       "<pymongo.results.DeleteResult at 0x7f3e90d24640>"
       ]
      },
      "execution_count": 8,
@@ -372,6 +384,70 @@
    ],
    "source": [
     "posts.delete_one({'id': '4f927p'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('5e392aabc8ae73016fb46870'),\n",
+       " 'id': '2zczew',\n",
+       " 'post_id': 'reddit/dataisugly/2zczew',\n",
+       " 'datetime': '2015-03-17T15:44:00',\n",
+       " 'url': 'https://reddit.com/r/dataisugly/comments/2zczew/the_cost_of_remediation_kind_of/',\n",
+       " 'title': 'The cost of remediation... kind of.',\n",
+       " 'content': '[deleted]',\n",
+       " 'author': '',\n",
+       " 'thumbnail': {'url': '', 'width': 0, 'height': 0},\n",
+       " 'preview': {'url': '', 'width': 0, 'height': 0},\n",
+       " 'removed': '',\n",
+       " 'ups': 1,\n",
+       " 'num_comments': 0,\n",
+       " 'external_link': 'http://[Imgur](http://i.imgur.com/ozwpju8.png)',\n",
+       " 'source': 'dataisugly',\n",
+       " 'source_platform': 'reddit',\n",
+       " 'source_url': 'https://www.reddit.com/r/dataisugly',\n",
+       " 'duplicated_posts': [],\n",
+       " 'tags': [],\n",
+       " 'media_type': 'text',\n",
+       " 'labels': {'auto': []}}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "posts.find_one({'external_link': 'http://[Imgur](http://i.imgur.com/ozwpju8.png)'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x7f3ea5a36b90>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "posts.update_one({'external_link': 'http://[Imgur](http://i.imgur.com/ozwpju8.png)'}, {'$set': {'external_link': 'http://i.imgur.com/ozwpju8.png'}})"
    ]
   },
   {
@@ -401,6 +477,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
