--- a/tumblr_digest.ipynb
+++ b/tumblr_digest.ipynb
@@ -84,6 +84,7 @@
     "        'preview',\n",
     "        'num_comments',\n",
     "        'source',\n",
+    "        'source_platform',\n",
     "        'source_url',\n",
     "        'tags',\n",
     "        'media_type',\n",
@@ -98,6 +99,7 @@
     "        self.title = p['summary']\n",
     "        self.num_comments = p['note_count']\n",
     "        self.source = p['blog']['name']\n",
+    "        self.source_platform = 'tumblr'\n",
     "        self.source_url = p['blog']['url']\n",
     "\n",
     "    def digest (self):\n",
@@ -210,7 +212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0289e23f27cf4a0eb3ae004442f360a4",
+       "model_id": "eb9fd6cf2115497d8eb598fda86cfe00",
        "version_major": 2,
        "version_minor": 0
       },
@@ -346,6 +348,82 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {
+     "230ea958dba34495a83a74494c68ed88": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "6d5a23442c2341639380212dd69f9f3f": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "ProgressStyleModel",
+      "state": {
+       "description_width": "initial"
+      }
+     },
+     "710dbda7a99e4c3785b3615be1b84144": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "FloatProgressModel",
+      "state": {
+       "bar_style": "success",
+       "layout": "IPY_MODEL_95daeb735e6946858a505c0950e42eee",
+       "max": 1,
+       "style": "IPY_MODEL_6d5a23442c2341639380212dd69f9f3f",
+       "value": 1
+      }
+     },
+     "7c69cf99f9554ebb88a79f5c0876148f": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "951d347f0f854c2b8c34351a59fd819a": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "DescriptionStyleModel",
+      "state": {
+       "description_width": ""
+      }
+     },
+     "95daeb735e6946858a505c0950e42eee": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "c2f4c398059341fd866e7e76f713814e": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "layout": "IPY_MODEL_7c69cf99f9554ebb88a79f5c0876148f",
+       "style": "IPY_MODEL_951d347f0f854c2b8c34351a59fd819a",
+       "value": " 2339/? [00:02&lt;00:00, 995.77it/s]"
+      }
+     },
+     "eb9fd6cf2115497d8eb598fda86cfe00": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "HBoxModel",
+      "state": {
+       "children": [
+        "IPY_MODEL_710dbda7a99e4c3785b3615be1b84144",
+        "IPY_MODEL_c2f4c398059341fd866e7e76f713814e"
+       ],
+       "layout": "IPY_MODEL_230ea958dba34495a83a74494c68ed88"
+      }
+     }
+    },
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
