update and rename notebooks

--- a/images_meta.ipynb
+++ b/images_meta.ipynb
@@ -279,7 +279,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25dc2b88b492487996200a2de095d9df",
+       "model_id": "81b07a9ea56d4b02bf64d3bf8ba1058a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -294,61 +294,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All image files are invalid: reddit/dataisugly/921umu:0\n",
-      "All image files are invalid: reddit/dataisugly/2hbbbr:0\n",
-      "All image files are invalid: reddit/dataisugly/2nwubr:0\n",
-      "All image files are invalid: reddit/dataisugly/2ajjde:0\n",
-      "All image files are invalid: reddit/dataisugly/40s58x:0\n",
-      "All image files are invalid: reddit/dataisugly/4n6jh9:0\n",
-      "All image files are invalid: reddit/dataisugly/2zrizi:0\n",
-      "All image files are invalid: reddit/dataisugly/1ktavo:0\n",
-      "All image files are invalid: reddit/dataisugly/148uv0:0\n",
-      "All image files are invalid: reddit/dataisugly/24ammj:0\n",
-      "All image files are invalid: reddit/dataisugly/3f3c4w:0\n",
-      "All image files are invalid: reddit/dataisugly/29fugw:0\n",
-      "All image files are invalid: reddit/dataisugly/1mbw5k:0\n",
-      "All image files are invalid: reddit/dataisugly/1nlcmx:0\n",
-      "All image files are invalid: reddit/dataisugly/23mkib:0\n",
-      "All image files are invalid: reddit/dataisugly/2p3g6k:0\n",
-      "All image files are invalid: reddit/dataisugly/54srjj:0\n",
-      "All image files are invalid: reddit/dataisugly/2o08rl:0\n",
-      "All image files are invalid: reddit/dataisugly/3zcw30:0\n",
-      "All image files are invalid: reddit/dataisugly/24knuu:0\n",
-      "All image files are invalid: reddit/dataisugly/2xoi4e:0\n",
-      "All image files are invalid: reddit/dataisugly/3tg3am:0\n",
-      "All image files are invalid: reddit/dataisugly/47oj0j:0\n",
-      "All image files are invalid: reddit/dataisugly/2bjxri:0\n",
-      "All image files are invalid: reddit/dataisugly/2wfu07:0\n",
-      "All image files are invalid: reddit/dataisugly/2x1the:0\n",
-      "All image files are invalid: reddit/dataisugly/2l5nix:0\n",
+      "All image files are invalid: reddit/dataisugly/5p549g:0\n",
       "All image files are invalid: reddit/dataisugly/13q6qd:0\n",
-      "All image files are invalid: reddit/dataisugly/2m1vle:0\n",
-      "All image files are invalid: reddit/dataisugly/28rgez:0\n",
-      "All image files are invalid: reddit/dataisugly/93hkmk:0\n",
-      "All image files are invalid: reddit/dataisugly/5iobqn:0\n",
-      "All image files are invalid: reddit/dataisugly/2zp3lb:0\n",
-      "All image files are invalid: reddit/dataisugly/245agu:0\n",
-      "All image files are invalid: reddit/dataisugly/5i4fyf:0\n",
-      "All image files are invalid: reddit/dataisugly/1zzxxs:0\n",
-      "All image files are invalid: reddit/dataisugly/4immw6:0\n",
-      "All image files are invalid: reddit/dataisugly/1tclw5:0\n",
-      "All image files are invalid: reddit/dataisugly/2o4m8n:0\n",
-      "All image files are invalid: reddit/dataisugly/3pcwdn:0\n",
-      "All image files are invalid: reddit/dataisugly/3cd39x:0\n",
-      "All image files are invalid: reddit/dataisugly/36vg4y:0\n",
-      "All image files are invalid: reddit/dataisugly/8noc3e:0\n",
+      "All image files are invalid: reddit/dataisugly/32rnec:0\n",
+      "All image files are invalid: reddit/dataisugly/308tua:0\n",
       "All image files are invalid: reddit/dataisugly/30zqtf:0\n",
+      "All image files are invalid: reddit/dataisugly/3cd39x:0\n",
+      "All image files are invalid: reddit/dataisugly/2zrizi:0\n",
+      "All image files are invalid: reddit/dataisugly/2x1the:0\n",
+      "All image files are invalid: reddit/dataisugly/4immw6:0\n",
+      "All image files are invalid: reddit/dataisugly/24knuu:0\n",
+      "All image files are invalid: reddit/dataisugly/2hbbbr:0\n",
+      "All image files are invalid: reddit/dataisugly/2bjxri:0\n",
+      "All image files are invalid: reddit/dataisugly/148uv0:0\n",
+      "All image files are invalid: reddit/dataisugly/921umu:0\n",
+      "All image files are invalid: reddit/dataisugly/1ktavo:0\n",
+      "All image files are invalid: reddit/dataisugly/2zp3lb:0\n",
+      "All image files are invalid: reddit/dataisugly/2o4m8n:0\n",
+      "All image files are invalid: reddit/dataisugly/5i4i7k:0\n",
       "All image files are invalid: reddit/dataisugly/3ie62k:0\n",
+      "All image files are invalid: reddit/soccer/83zq16:0\n",
+      "All image files are invalid: reddit/dataisugly/1mbw5k:0\n",
+      "All image files are invalid: reddit/dataisugly/2nwubr:0\n",
+      "All image files are invalid: reddit/dataisugly/24ammj:0\n",
+      "All image files are invalid: reddit/dataisugly/29fugw:0\n",
+      "All image files are invalid: reddit/dataisugly/34nu2c:0\n",
+      "All image files are invalid: reddit/dataisugly/2m1vle:0\n",
       "All image files are invalid: reddit/dataisugly/31qrc2:0\n",
+      "All image files are invalid: reddit/dataisugly/3or2g0:0\n",
+      "All image files are invalid: reddit/dataisugly/1zzxxs:0\n",
+      "All image files are invalid: reddit/dataisugly/1nlcmx:0\n",
+      "All image files are invalid: reddit/dataisugly/54srjj:0\n",
+      "All image files are invalid: reddit/dataisugly/23mkib:0\n",
       "All image files are invalid: reddit/dataisugly/8e9kjh:0\n",
       "All image files are invalid: reddit/dataisugly/4vozlw:0\n",
-      "All image files are invalid: reddit/dataisugly/5i4i7k:0\n",
-      "All image files are invalid: reddit/dataisugly/3or2g0:0\n",
-      "All image files are invalid: reddit/dataisugly/683b4i:0\n",
-      "All image files are invalid: reddit/dataisugly/5p549g:0\n",
-      "All image files are invalid: reddit/dataisugly/9ifxcs:3\n",
+      "All image files are invalid: reddit/dataisugly/40s58x:0\n",
+      "All image files are invalid: reddit/dataisugly/4n6jh9:0\n",
+      "All image files are invalid: reddit/dataisugly/47oj0j:0\n",
+      "All image files are invalid: reddit/dataisugly/2wfu07:0\n",
       "All image files are invalid: reddit/dataisugly/34xxf6:0\n",
-      "All image files are invalid: reddit/dataisugly/308tua:0\n",
+      "All image files are invalid: reddit/dataisugly/2o08rl:0\n",
+      "All image files are invalid: reddit/dataisugly/2l5nix:0\n",
+      "All image files are invalid: reddit/dataisugly/245agu:0\n",
+      "All image files are invalid: reddit/dataisugly/2ij2tf:0\n",
+      "All image files are invalid: reddit/dataisugly/2xoi4e:0\n",
+      "All image files are invalid: reddit/dataisugly/3tg3am:0\n",
+      "All image files are invalid: reddit/dataisugly/1joq4e:0\n",
+      "All image files are invalid: reddit/dataisugly/683b4i:0\n",
+      "All image files are invalid: reddit/dataisugly/3pcwdn:0\n",
+      "All image files are invalid: reddit/dataisugly/28rgez:0\n",
+      "All image files are invalid: reddit/dataisugly/3f3c4w:0\n",
+      "All image files are invalid: reddit/dataisugly/9ifxcs:3\n",
+      "All image files are invalid: reddit/dataisugly/93hkmk:0\n",
+      "All image files are invalid: reddit/dataisugly/8noc3e:0\n",
+      "All image files are invalid: reddit/dataisugly/36vg4y:0\n",
+      "All image files are invalid: reddit/dataisugly/5i4fyf:0\n",
+      "All image files are invalid: reddit/dataisugly/3zcw30:0\n",
+      "All image files are invalid: reddit/dataisugly/2p3g6k:0\n",
+      "All image files are invalid: reddit/dataisugly/2ajjde:0\n",
+      "All image files are invalid: reddit/dataisugly/5iobqn:0\n",
+      "All image files are invalid: reddit/dataisugly/4f102w:5\n",
+      "All image files are invalid: reddit/dataisugly/1tclw5:0\n",
       "\n"
      ]
     }
@@ -449,12 +455,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c508c58c836c4428a77a30591e252484",
+       "model_id": "9d809cdd3ef247c780c4ea3de3f5215a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=7999.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=7993.0), HTML(value='')))"
       ]
      },
      "metadata": {},
