add image labeling

--- a/images_convert.ipynb
+++ b/images_convert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
@@ -120,20 +120,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "images/external_link/reddit/dataisugly/65whnm.svg\n",
-      "images/external_link/reddit/dataisugly/70u6d2.svg\n",
-      "images/external_link/reddit/dataisugly/67k7av.svg\n",
-      "images/external_link/reddit/dataisugly/4nrtbc.svg\n",
-      "images/external_link/reddit/dataisugly/825ac2.svg\n",
-      "images/external_link/reddit/dataisugly/69yvyt.svg\n",
-      "images/external_link/reddit/dataisugly/4p4v8y.svg\n",
-      "images/external_link/reddit/dataisugly/24wwx0.svg\n",
-      "images/external_link/reddit/dataisugly/560wz7.svg\n",
-      "images/external_link/reddit/dataisugly/2ozjnf.svg\n",
-      "images/external_link/reddit/dataisugly/2lrdlz.svg\n",
-      "images/external_link/reddit/dataisugly/2gs5vv.svg\n",
-      "images/external_link/reddit/dataisugly/5akipl.svg\n",
-      "images/external_link/reddit/dataisugly/77jqk2.svg\n"
+      "images/manual/reddit/dataisugly/6p43be.svg\n"
      ]
     }
    ],
@@ -179,28 +166,7 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "images/external_link/reddit/dataisugly/6k75ne.mp4\n",
-      "rm: cannot remove 'images/external_link/reddit/dataisugly/6k75ne.gif': No such file or directory\n",
-      "images/external_link/reddit/dataisugly/6x00ux.mp4\n",
-      "rm: cannot remove 'images/external_link/reddit/dataisugly/6x00ux.gif': No such file or directory\n",
-      "images/external_link/reddit/dataisugly/6flghc.mp4\n",
-      "rm: cannot remove 'images/external_link/reddit/dataisugly/6flghc.gif': No such file or directory\n",
-      "images/external_link/reddit/dataisugly/aq45ys.mp4\n",
-      "rm: cannot remove 'images/external_link/reddit/dataisugly/aq45ys.gif': No such file or directory\n",
-      "images/external_link/reddit/dataisugly/3s9u7s.mp4\n",
-      "rm: cannot remove 'images/external_link/reddit/dataisugly/3s9u7s.gif': No such file or directory\n",
-      "images/external_link/reddit/dataisugly/aq45ob.mp4\n",
-      "rm: cannot remove 'images/external_link/reddit/dataisugly/aq45ob.gif': No such file or directory\n",
-      "images/external_link/reddit/dataisugly/49f8u8.mp4\n",
-      "rm: cannot remove 'images/external_link/reddit/dataisugly/49f8u8.gif': No such file or directory\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for root, dirs, files in os.walk(images_dir):\n",
     "    for name in files:\n",
@@ -244,15 +210,7 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "images/external_link/reddit/dataisugly/51bj75.bmp\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for root, dirs, files in os.walk(images_dir):\n",
     "    for name in files:\n",
@@ -299,8 +257,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "images/external_link/reddit/dataisugly/71cunh.webp\n",
-      "images/external_link/reddit/dataisugly/9lnnlr.webp\n"
+      "images/manual/reddit/dataisugly/7kwcjs.webp\n",
+      "images/manual/reddit/dataisugly/2m3j1g.webp\n",
+      "images/manual/reddit/dataisugly/e2ar2p.webp\n",
+      "images/manual/reddit/dataisugly/3jdi3b.webp\n",
+      "images/manual/reddit/dataisugly/2ukujp.webp\n",
+      "images/manual/reddit/dataisugly/450llb.webp\n",
+      "images/manual/reddit/dataisugly/23v599.webp\n",
+      "images/manual/reddit/dataisugly/22ggjc.webp\n",
+      "images/manual/reddit/dataisugly/2lzddu/2lzddu-1.webp\n",
+      "images/manual/reddit/dataisugly/561ytm/561ytm-2.webp\n",
+      "images/manual/reddit/dataisugly/561ytm/561ytm-3.webp\n",
+      "images/manual/reddit/dataisugly/561ytm/561ytm-5.webp\n",
+      "images/manual/reddit/dataisugly/561ytm/561ytm-1.webp\n",
+      "images/manual/reddit/dataisugly/561ytm/561ytm-4.webp\n",
+      "images/manual/reddit/dataisugly/6238pm/6238pm-1.webp\n",
+      "images/manual/reddit/dataisugly/6238pm/6238pm-2.webp\n"
      ]
     }
    ],
@@ -334,33 +306,9 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "images/external_link/reddit/dataisugly/2w19o1.pngh\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# id: '2w19o1' downloaded from 'http://i.imgur.com/GE7LJR6.pngh' as .pngh\n",
-    "\n",
-    "for root, dirs, files in os.walk(images_dir):\n",
-    "    for name in files:\n",
-    "        basename, ext = os.path.splitext(name)\n",
-    "        if ext == '.pngh':\n",
-    "            print(os.path.join(root, name))\n",
-    "            !mv {os.path.join(root, name)} {os.path.join(root, basename) + '.png'}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "source": [
-    "# Delete invalid file"
+    "import os"
    ]
   },
   {
@@ -374,7 +322,102 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "images/external_link/reddit/dataisugly/4f927p(null\n"
+      "images/manual/reddit/dataisugly/5vtdrz.jpeg\n",
+      "images/manual/reddit/dataisugly/972api.jpeg\n",
+      "images/manual/reddit/dataisugly/3u3ew3.jpeg\n",
+      "images/manual/reddit/dataisugly/2elizo.jpeg\n",
+      "images/manual/reddit/dataisugly/6elnpd.jpeg\n",
+      "images/manual/reddit/dataisugly/9k9fqr.jpeg\n",
+      "images/manual/reddit/dataisugly/35pif6.jpeg\n",
+      "images/manual/reddit/dataisugly/44ycxv.jpeg\n",
+      "images/manual/reddit/dataisugly/1x7uwd.jpeg\n",
+      "images/manual/reddit/dataisugly/2ukujp.jpeg\n",
+      "images/manual/reddit/dataisugly/4xdhtr.jpeg\n",
+      "images/manual/reddit/dataisugly/7hyjo3.jpeg\n",
+      "images/manual/reddit/dataisugly/9xcv7h.jpeg\n",
+      "images/manual/reddit/dataisugly/9lg7wg.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr.jpeg\n",
+      "images/manual/reddit/dataisugly/208ry2.jpeg\n",
+      "images/manual/reddit/dataisugly/2dab8r.jpeg\n",
+      "images/manual/reddit/dataisugly/2i48do.jpeg\n",
+      "images/manual/reddit/dataisugly/2w3xbz.jpeg\n",
+      "images/manual/reddit/dataisugly/99bczz/99bczz-3.jpeg\n",
+      "images/manual/reddit/dataisugly/99bczz/99bczz-4.jpeg\n",
+      "images/manual/reddit/dataisugly/99bczz/99bczz-1.jpeg\n",
+      "images/manual/reddit/dataisugly/99bczz/99bczz-2.jpeg\n",
+      "images/manual/reddit/dataisugly/2lzddu/2lzddu-2.jpeg\n",
+      "images/manual/reddit/dataisugly/68scgb/68scgb-20.jpeg\n",
+      "images/manual/reddit/dataisugly/68scgb/68scgb-12.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-3.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-15.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-6.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-2.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-14.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-25.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-12.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-28.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-10.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-4.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-8.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-21.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-29.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-11.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-26.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-17.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-13.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-20.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-27.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-24.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-18.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-5.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-30.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-7.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-9.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-1.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-19.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-22.jpeg\n",
+      "images/manual/reddit/dataisugly/2nwubr/2nwubr-23.jpeg\n",
+      "images/manual/reddit/dataisugly/683b4i/683b4i-2.jpeg\n",
+      "images/manual/reddit/dataisugly/683b4i/683b4i-1.jpeg\n",
+      "images/manual/reddit/dataisugly/683b4i/683b4i-3.jpeg\n"
+     ]
+    }
+   ],
+   "source": [
+    "# id: '2w19o1' downloaded from 'http://i.imgur.com/GE7LJR6.pngh' as .pngh\n",
+    "\n",
+    "for root, dirs, files in os.walk(images_dir):\n",
+    "    for name in files:\n",
+    "        basename, ext = os.path.splitext(name)\n",
+    "        if ext == '.jpeg':\n",
+    "            print(os.path.join(root, name))\n",
+    "            os.rename(os.path.join(root, name), os.path.join(root, basename) + '.jpg')\n",
+    "        if ext == '.pngh':\n",
+    "            print(os.path.join(root, name))\n",
+    "            os.rename(os.path.join(root, name), os.path.join(root, basename) + '.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "# Delete invalid file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "images/manual/reddit/dataisugly/.DS_Store\n"
      ]
     }
    ],
@@ -400,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "Collapsed": "false"
    },
@@ -411,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "Collapsed": "false"
    },
@@ -423,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "Collapsed": "false"
    },
@@ -436,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "Collapsed": "false"
    },
@@ -449,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "Collapsed": "false"
    },
@@ -472,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "Collapsed": "false"
    },
@@ -495,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "Collapsed": "false"
    },
