--- a/reddit_digest.ipynb
+++ b/reddit_digest.ipynb
@@ -290,7 +290,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7807cb01e4842568ec95d8b7e6de994",
+       "model_id": "12076b1d9a0d4c188cc8b9339630d6f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,7 +332,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('5e3fdf5bc8ae73016fd1a58a'),\n",
+       "{'_id': ObjectId('5e6bb50fa6b5ca18fecb3cd5'),\n",
        " 'id': '4f927p',\n",
        " 'post_id': 'reddit/dataisugly/4f927p',\n",
        " 'datetime': '2016-04-17T23:25:13',\n",
@@ -361,7 +361,7 @@
     }
    ],
    "source": [
-    "posts.find_one({'id': '4f927p'})"
+    "posts.find_one({'id': '4f927p'}) # invalid external_link: imgur.com/(null)"
    ]
   },
   {
@@ -374,7 +374,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x7f3e90d24640>"
+       "<pymongo.results.DeleteResult at 0x7f13dde9d500>"
       ]
      },
      "execution_count": 8,
@@ -425,7 +425,7 @@
     }
    ],
    "source": [
-    "posts.find_one({'external_link': 'http://[Imgur](http://i.imgur.com/ozwpju8.png)'})"
+    "posts.find_one({'external_link': 'http://[Imgur](http://i.imgur.com/ozwpju8.png)'}) # invalid external_link"
    ]
   },
   {
@@ -438,7 +438,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7f3ea5a36b90>"
+       "<pymongo.results.UpdateResult at 0x7f13ddea70f0>"
       ]
      },
      "execution_count": 10,
@@ -476,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
